2002-09-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpHandle.m: ([-connectToPort:beforeDate:]) Added more
	informative logging for problem condition reported by Nicila ...
	perhaps it will help tracking down cause.

2002-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Where a %p format prints a null pointer,
	print the text (null).
	* Source/GSTcpHandle.m: Check port for invalidation while looping
	on write events, so we can fail if we become invalid while sending
	or connecting, before the port timeout expires.
	* Source/NSConnection.m: Check connection for invalidation while
	looping waiting for a reply, so we can fail if we become invalid
	before the timeout expires.
	* Source/DocMakefile: Specify template options
	* Tools/autogsdoc.m: Remove hack to turn templates on by default.
	Document the use of templates.
	* Tools/gsdoc-0_6_7.dtd: Hack in more types for indexing ... don't
	know if the software works for them though.

2002-09-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Restructure conversion from unicode slightly,
	to make it clearer and more readable and to include handling of
	lossy conversions.
	* Headers/gnustep/unicode/gsm0338.h: Added table for lossy conversion
	from unicode.

2002-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Bugfix ... look for source files more
	intelligently. Try both current directory and relative to header.
	* Tools/AGSOutput.m: When creating template output file for functions
	etc because none was supplied, take account of the -Up flag and
	create an up link in it.
	* Source/GSHTTPURLHandle.m: If response parsing fails, fail the
	load operation and (conditionally when debug enabled) log an error.

2002-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Basic/dummy implementations of new MacOS-X
	methods added. Attribute handling totally rewritten to work in a lazy
	way ... so we only set up attribute info in the dictionary when we